# SNOLAB-s-personal-GIMLI

./: README.md
BDS/GEL_CONTAMINATION_SLBDS/: CMakeLists.txt  FluxNeutrons.mac  U-235.mac  slbds.cc
BDS/GEL_CONTAMINATION_SLBDS/include/: Run.hh  Run.hh~
BDS/GEL_CONTAMINATION_SLBDS/src/: Action.cc  Detector.cc  DetectorConstruction.cc  PhysicsList.cc~  Run.cc  Run.cc~
BDS/H-2_SIMULATION(SLBDS)/: CMakeLists.txt  slbds.cc
BDS/H-2_SIMULATION(SLBDS)/include/: Detector.hh  Detector.hh~  PhysicsList.hh  PhysicsList.hh~
BDS/H-2_SIMULATION(SLBDS)/src/: Action.cc  Action.cc~  Detector.cc  Detector.cc~  (+3 more)
BDS/SLBDS_Neutron_Flux/: CMakeLists.txt  bds.cc
BDS/SLBDS_Updated/: CMakeLists.txt  slbds.cc  slbds.cc~
NCD1inch_PolyEthylene/: MonoNeutrons.mac
NCD1inch_PolyEthylene/include/: Detector.hh
NCD1inch_PolyEthylene/src/: DetectorConstruction.cc
NCD2inch_PolyEthylene/: NCD.cc
NCD3inch_PolyEthylene/: NCD.cc
NCD3inch_PolyEthylene/include/: DetectorConstruction.hh  Run.hh
NCD3inch_PolyEthylene/src/: PhysicsList.cc
NCD4inch_PolyEthylene/include/: NeutronHPMessenger.hh
NCD5inch_PolyEthylene/include/: Detector.hh
NCD5inch_PolyEthylene/src/: DetectorConstruction.cc
NCD_Moderation_Tests/NCD4inch_PolyEthylene/: NCD.cc
NCD_Moderation_Tests/NCD5inch_PolyEthylene/: NCD.cc
NCD_Moderation_Tests/NCD_bare/: CMakeCache.txt
NCD_PYTHON/Calculating_Triton_Response_Probability/: Code.py
NCD_PYTHON/MLEM/: 3NCD_Data2.csv  3NCD_Data_high_resolution.csv  3NCD_Data_high_resolution.xlsx  Rebin.py  Rebinned_HGResponseMatrix_6x6.csv  Rebinned_ResponseMatrix_6x6.csv  execute.py  gravel.py  mlem.py  test.py
NCD_ThermalNeutrons/NCD1inch_PolyEthylene/: NCD.cc  science2g4
NCD_ThermalNeutrons/NCD_2inchPE/: CMakeCache.txt  CMakeLists.txt
NCD_bare/: NCD.cc  README.txt
NCD_bare/src/: Detector.cc  DetectorConstruction.cc  EventAction.cc
(+51 files in other folders)
